fix nav overflow x

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -25,7 +25,7 @@ nav{
     border-top: 1px solid #e8ecef;
     border-bottom: 1px solid #e8ecef;
     background-color: #fff;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 .menu {
     display: flex;
