--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -32,7 +32,7 @@
 		margin-left: 15px;
 	}
 	.sort__text{
-		margin-left: 20px;
+		margin-left: 0px;
 	}
 	.menu__link p {
 		display: inline-block;
